--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -3,10 +3,7 @@
 <main class="container">
    <div class="row">
       <div class="col-md-6 offset-md-3">
-         <h1 class="text-center display-3 py-5">Tasks Pending</h1>
-         <h1>
-            {{tipopagina}}
-         </h1>
+         <h1 class="text-center display-3 py-5">{{tipopagina}}</h1>
          <ul class="list-group">
              {% for task in tasks %}
              <a class="list-group-item" href="{% url 'task_detail' task.id %}">
