--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -16,7 +16,7 @@
                 <p>{{task.user.username}}</p>
              </header>
              <p>{{task.description}}</p>
-             
+             <p>{{task.resena}}</p>
              <p>{{task.datecompleted|date:'M j Y:i'}}</p>
    
 
