--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -14,11 +14,12 @@
                 <h1 class="fw-bold">{{task.title}}</h1>
                 {% endif %}
                 <p>{{task.user.username}}</p>
-                <p>{{task.resena}}</p>
+               
              </header>
              <p>{{task.description}}</p>
              
              <p>{{task.datecompleted|date:'M j Y:i'}}</p>
+             <h1>{{task.resena}}</h1>
    
 
 
