--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -17,9 +17,9 @@
                
              </header>
              <p>{{task.description}}</p>
-             
+             <p>{{task.resena}}</p>
              <p>{{task.datecompleted|date:'M j Y:i'}}</p>
-             <h1>{{task.resena}}</h1>
+             
    
 
 
