--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -17,7 +17,7 @@
                
              </header>
              <p>{{task.description}}</p>
-             <p>{{task.resena}}</p>
+             <p>{{task.cuerpo}}</p>
              <p>{{task.datecompleted|date:'M j Y:i'}}</p>
              
    
